--- a/samples/Storefront/StorefrontPublicComposite/packages.config
+++ b/samples/Storefront/StorefrontPublicComposite/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Andromeda-CompositeInspector" version="1.0.0.0" />
   <package id="EntityFramework" version="4.1.10331.0" />
   <package id="Euclid-CompositeInspector" version="1.0.0.0" />
   <package id="jQuery" version="1.5.1" />
