--- a/samples/Storefront/StorefrontAgent/packages.config
+++ b/samples/Storefront/StorefrontAgent/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Andromeda-AgentSDK" version="1.0.0.0" />
-  <package id="Euclid-AgentSDK" version="1.0.0.0" />
+  <package id="Andromeda-AgentSDK" version="1.0.0.0" />
 </packages>
